rename endpoint userGet to userMeGet
