# server/api/swagger.yaml
@@ -16,13 +16,13 @@ info:
 host: "localhost:8080"
 basePath: "/v1"
 paths:
-  /user:
+  /user/me:
     get:
       tags:
       - "User"
       summary: "get me"
       description: "Get authorized User (me)"
-      operationId: "userGET"
+      operationId: "userMeGET"
       parameters: []
       responses:
         200:
